--- a/paper_ms_method_HSCY1/cmbObs.bib
+++ b/paper_ms_method_HSCY1/cmbObs.bib
@@ -1,7 +1,4 @@
-%===========================================
-%CMB Observation
-%===========================================
-@article{WMAP9th,
+@ARTICLE{cmb-WMAP9-Hinshaw2013,
 	doi = {10.1088/0067-0049/208/2/19},
 	url = {https://doi.org/10.1088%2F0067-0049%2F208%2F2%2F19},
 	year = 2013,
