--- a/paper_ms_method_HSCY1/massMap.bib
+++ b/paper_ms_method_HSCY1/massMap.bib
@@ -18,15 +18,27 @@ Basics
 
 
 
+@ARTICLE{LSS-massMap-Wiener-Simon2009,
+       author = {{Simon}, P. and {Taylor}, A.~N. and {Hartlap}, J.},
+        title = "{Unfolding the matter distribution using three-dimensional weak gravitational lensing}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, dark matter, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2009,
+        month = oct,
+       volume = {399},
+       number = {1},
+        pages = {48-68},
+          doi = {10.1111/j.1365-2966.2009.15246.x},
+archivePrefix = {arXiv},
+       eprint = {0907.0016},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.399...48S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-====
-Method
-====
 
-==
-Sparsity
-==
-@ARTICLE{massMap-Glimpse3D2014,
+
+@ARTICLE{LSS-massMap-Glimpse3D-Leonard2014,
    author = {{Leonard}, A. and {Lanusse}, F. and {Starck}, J.-L.},
     title = "{GLIMPSE: accurate 3D weak lensing reconstructions using sparsity}",
   journal = {\mnras},
@@ -43,19 +55,10 @@ archivePrefix = "arXiv",
 }
 
 
-
-
-
-
-====
-Obs
-====
-
-
 @ARTICLE{HSC1-massMaps,
-   author = {{Oguri}, M. and {Miyazaki}, S. and {Hikage}, C. and {Mandelbaum}, R. and 
-	{Utsumi}, Y. and {Miyatake}, H. and {Takada}, M. and {Armstrong}, R. and 
-	{Bosch}, J. and {Komiyama}, Y. and {Leauthaud}, A. and {More}, S. and 
+   author = {{Oguri}, M. and {Miyazaki}, S. and {Hikage}, C. and {Mandelbaum}, R. and
+	{Utsumi}, Y. and {Miyatake}, H. and {Takada}, M. and {Armstrong}, R. and
+	{Bosch}, J. and {Komiyama}, Y. and {Leauthaud}, A. and {More}, S. and
 	{Nishizawa}, A.~J. and {Okabe}, N. and {Tanaka}, M.},
     title = "{Two- and three-dimensional wide-field weak lensing mass maps from the Hyper Suprime-Cam Subaru Strategic Program S16A data}",
   journal = {\pasj},
@@ -183,5 +186,3 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474..712M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
