--- a/paper_ms_method_HSCY1/other.bib
+++ b/paper_ms_method_HSCY1/other.bib
@@ -1,36 +1,32 @@
-@ARTICLE{numpy2007,
-author={T. E. Oliphant},
-journal={Computing in Science Engineering},
-title={Python for Scientific Computing},
-year={2007},
-volume={9},
-number={3},
-pages={10-20},
-keywords={high level languages;Python;scientific computing;steering language;scientific codes;high-level language;Scientific computing;High level languages;Libraries;Writing;Application software;Embedded software;Software standards;Standards development;Internet;Prototypes;Python;computer languages;scientific programming;scientific computing},
-doi={10.1109/MCSE.2007.58},
-ISSN={1521-9615},
-month={May},}
+@ARTICLE{python-numpy-Oliphant2007,
+    author={T. E. Oliphant},
+    journal={Computing in Science Engineering},
+    title={Python for Scientific Computing},
+    year={2007},
+    volume={9},
+    number={3},
+    pages={10-20},
+    keywords={high level languages;Python;scientific computing;steering language;scientific codes;high-level language;Scientific computing;High level languages;Libraries;Writing;Application software;Embedded software;Software standards;Standards development;Internet;Prototypes;Python;computer languages;scientific programming;scientific computing},
+    doi={10.1109/MCSE.2007.58},
+    ISSN={1521-9615},
+    month={May},
+}
 
+@INPROCEEDINGS{stat-SOM-Kohonen1997,
+    author={T. {Kohonen}},
+    booktitle={Proceedings of International Conference on Neural Networks (ICNN'97)},
+    title={Exploration of very large databases by self-organizing maps},
+    year={1997},
+    volume={1},
+    number={},
+    pages={PL1-PL6 vol.1},
+    keywords={very large databases;self-organising feature maps;visual databases;information retrieval;content-addressable storage;very large databases;self-organizing maps;data organization system;content-addressable memory;WEBSOM;browsing tools;free-form queries;document map;Databases;Self organizing feature maps;Histograms;Neural networks;Encoding;Pattern analysis;Distributed computing;Optimization methods},
+    doi={10.1109/ICNN.1997.611622},
+    ISSN={},
+    month={June},
+}
 
-@INPROCEEDINGS{SOM1997,
-author={T. {Kohonen}},
-booktitle={Proceedings of International Conference on Neural Networks (ICNN'97)},
-title={Exploration of very large databases by self-organizing maps},
-year={1997},
-volume={1},
-number={},
-pages={PL1-PL6 vol.1},
-keywords={very large databases;self-organising feature maps;visual databases;information retrieval;content-addressable storage;very large databases;self-organizing maps;data organization system;content-addressable memory;WEBSOM;browsing tools;free-form queries;document map;Databases;Self organizing feature maps;Histograms;Neural networks;Encoding;Pattern analysis;Distributed computing;Optimization methods},
-doi={10.1109/ICNN.1997.611622},
-ISSN={},
-month={June},}
-
-
-%================
-%HSC Hardware
-%================
-
-@ARTICLE{HSC-HW-Miyazaki2018,
+@ARTICLE{hardware-HSC-Miyazaki2018,
    author = {{Miyazaki}, S. and {Komiyama}, Y. and {Kawanomoto}, S. and {Doi}, Y. and
 	{Furusawa}, H. and {Hamana}, T. and {Hayashi}, Y. and {Ikeda}, H. and
 	{Kamata}, Y. and {Karoji}, H. and {Koike}, M. and {Kurakami}, T. and
@@ -66,12 +62,11 @@ month={June},}
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-@ARTICLE{HSC-HW-Komiyama2018,
-   author = {{Komiyama}, Y. and {Obuchi}, Y. and {Nakaya}, H. and {Kamata}, Y. and 
-	{Kawanomoto}, S. and {Utsumi}, Y. and {Miyazaki}, S. and {Uraguchi}, F. and 
-	{Furusawa}, H. and {Morokuma}, T. and {Uchida}, T. and {Miyatake}, H. and 
-	{Mineo}, S. and {Fujimori}, H. and {Aihara}, H. and {Karoji}, H. and 
+@ARTICLE{hardware-HSC-Komiyama2018,
+   author = {{Komiyama}, Y. and {Obuchi}, Y. and {Nakaya}, H. and {Kamata}, Y. and
+	{Kawanomoto}, S. and {Utsumi}, Y. and {Miyazaki}, S. and {Uraguchi}, F. and
+	{Furusawa}, H. and {Morokuma}, T. and {Uchida}, T. and {Miyatake}, H. and
+	{Mineo}, S. and {Fujimori}, H. and {Aihara}, H. and {Karoji}, H. and
 	{Gunn}, J.~E. and {Wang}, S.-Y.},
     title = "{Hyper Suprime-Cam: Camera dewar design}",
   journal = {\pasj},
@@ -86,8 +81,7 @@ month={June},}
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-@ARTICLE{HSC-HW-Kawanomoto2018,
+@ARTICLE{hardware-HSC-Kawanomoto2018,
    author = {{Kawanomoto}, S. and {Uraguchi}, F. and {Komiyama}, Y. and {Miyazaki}, S. and
 	{Furusawa}, H. and {Finet}, F. and {Hattori}, T. and {Wang}, S.-Y. and
 	{Yasuda}, N. and {Suzuki}, N.},
@@ -104,25 +98,23 @@ month={June},}
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{HSC-HW-Furusawa2018,
-   author = {{Furusawa}, H. and {Koike}, M. and {Takata}, T. and {Okura}, Y. and 
-	{Miyatake}, H. and {Lupton}, R.~H. and {Bickerton}, S. and {Price}, P.~A. and 
-	{Bosch}, J. and {Yasuda}, N. and {Mineo}, S. and {Yamada}, Y. and 
-	{Miyazaki}, S. and {Nakata}, F. and {Koshida}, S. and {Komiyama}, Y. and 
-	{Utsumi}, Y. and {Kawanomoto}, S. and {Jeschke}, E. and {Noumaru}, J. and 
-	{Schubert}, K. and {Iwata}, I. and {Finet}, F. and {Fujiyoshi}, T. and 
+@ARTICLE{hardware-HSC-Furusawa2018,
+   author = {{Furusawa}, H. and {Koike}, M. and {Takata}, T. and {Okura}, Y. and
+	{Miyatake}, H. and {Lupton}, R.~H. and {Bickerton}, S. and {Price}, P.~A. and
+	{Bosch}, J. and {Yasuda}, N. and {Mineo}, S. and {Yamada}, Y. and
+	{Miyazaki}, S. and {Nakata}, F. and {Koshida}, S. and {Komiyama}, Y. and
+	{Utsumi}, Y. and {Kawanomoto}, S. and {Jeschke}, E. and {Noumaru}, J. and
+	{Schubert}, K. and {Iwata}, I. and {Finet}, F. and {Fujiyoshi}, T. and
 	{Tajitsu}, A. and {Terai}, T. and {Lee}, C.-H.},
     title = "{The on-site quality-assurance system for Hyper Suprime-Cam: OSQAH}",
-  journal = {\pasj},
- keywords = {cosmology: observations, methods: data analysis, methods: observational, surveys},
-     year = 2018,
+    journal = {\pasj},
+    keywords = {cosmology: observations, methods: data analysis, methods: observational, surveys},
+    year = 2018,
     month = jan,
-   volume = 70,
+    volume = 70,
       eid = {S3},
     pages = {S3},
       doi = {10.1093/pasj/psx079},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2018PASJ...70S...3F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
