--- a/paper_ms_method_HSCY1/weak_lensing.bib
+++ b/paper_ms_method_HSCY1/weak_lensing.bib
@@ -1,7 +1,3 @@
-%========================================
-%Historical Review
-%========================================
-
 @book{bookdodelson2017,
   title={Gravitational Lensing},
   author={Dodelson, S.},
@@ -11,7 +7,7 @@
   publisher={Cambridge University Press}
 }
 
-@article{revBartelmann01,
+@ARTICLE{revBartelmann01,
 title = "Weak gravitational lensing",
 journal = "Physics Reports",
 volume = "340",
@@ -74,7 +70,7 @@ archivePrefix = {arXiv},
 }
 
 
-@article{Lebach1995,
+@ARTICLE{Lebach1995,
   title = {Measurement of the Solar Gravitational Deflection of Radio Waves Using Very-Long-Baseline Interferometry},
   author = {Lebach, D. E. and Corey, B. E. and Shapiro, I. I. and Ratner, M. I. and Webber, J. C. and Rogers, A. E. E. and Davis, J. L. and Herring, T. A.},
   journal = {Phys. Rev. Lett.},
@@ -89,7 +85,6 @@ archivePrefix = {arXiv},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.75.1439}
 }
 
-
 @ARTICLE{Walsh1979,
    author = {{Walsh}, D. and {Carswell}, R.~F. and {Weymann}, R.~J.},
     title = "{0957 + 561 A, B - Twin quasistellar objects or gravitational lens}",
@@ -103,12 +98,6 @@ archivePrefix = {arXiv},
    adsurl = {http://adsabs.harvard.edu/abs/1979Natur.279..381W},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
-
-%===================================================================
-%Theory for cosmic shear
-%===================================================================
 
 @ARTICLE{Miralda1991,
    author = {{Miralda-Escude}, J.},
@@ -129,7 +118,7 @@ archivePrefix = {arXiv},
 %===================================================================
 
 @ARTICLE{Wittman2000,
-   author = {{Wittman}, D.~M. and {Tyson}, J.~A. and {Kirkman}, D. and {Dell'Antonio}, I. and 
+   author = {{Wittman}, D.~M. and {Tyson}, J.~A. and {Kirkman}, D. and {Dell'Antonio}, I. and
 	{Bernstein}, G.},
     title = "{Detection of weak gravitational lensing distortions of distant galaxies by cosmic dark matter at large scales}",
   journal = {\nat},
@@ -249,7 +238,7 @@ archivePrefix = {arXiv},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Z08,
+@ARTICLE{Z08,
 author = {Zhang, Jun},
 title = {Measuring the cosmic shear in Fourier space},
 journal = {\mnras},
@@ -317,7 +306,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{LuPSF17,
-   author = {{Lu}, T. and {Zhang}, J. and {Dong}, F. and {Li}, Y. and {Liu}, D. and 
+   author = {{Lu}, T. and {Zhang}, J. and {Dong}, F. and {Li}, Y. and {Liu}, D. and
 	{Fu}, L. and {Li}, G. and {Fan}, Z.},
     title = "{Testing PSF Interpolation in Weak Lensing with Real Data}",
   journal = {\aj},
@@ -350,7 +339,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Li18FPFS,
+@ARTICLE{Li18FPFS,
     author = {Li, Xiangchong and Oguri, Masamune and Katayama, Nobuhiko and More, Surhud},
     title = "{Fourier Power Function Shapelets (FPFS) shear estimator: performance on image simulations}",
     journal = {Monthly Notices of the Royal Astronomical Society},
@@ -367,7 +356,7 @@ archivePrefix = "arXiv",
 }
 
 
-@article{ann_calibration,
+@ARTICLE{ann_calibration,
   author={D. Gruen and S. Seitz and J. Koppenhoefer and A. Riffeser},
   title={Bias-free Shear Estimation Using Artificial Neural Networks},
   journal={\apj},
@@ -378,7 +367,6 @@ archivePrefix = "arXiv",
   year={2010},
   abstract={Bias due to imperfect shear calibration is the biggest obstacle when constraints on cosmological parameters are to be extracted from large area weak lensing surveys such as Pan-STARRS-3π, DES, or future satellite missions like EUCLID. We demonstrate that bias present in existing shear measurement pipelines (e.g., KSB) can be almost entirely removed by means of neural networks. In this way, bias correction can depend on the properties of the individual galaxy instead of being a single global value. We present a procedure to train neural networks for shear estimation and apply this to subsets of simulated GREAT08 RealNoise data. We also show that circularization of the point-spread function (PSF) before measuring the shear reduces the scatter related to the PSF anisotropy correction and thus leads to improved measurements, particularly on low and medium signal-to-noise data. Our results are competitive with the best performers in the GREAT08 competition, especially for the medium and higher signal-to-noise sets. Expressed in terms of the quality parameter defined by GREAT08, we achieve a Q ##IMG## [http://ej.iop.org/icons/Entities/ap.gif] {≈} 40, 140, and 1300 without and 50, 200, and 1300 with circularization for low, medium, and high signal-to-noise data sets, respectively.}
 }
-
 
 @ARTICLE{metacal1,
    author = {{Huff}, E. and {Mandelbaum}, R.},
@@ -392,7 +380,6 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170202600H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @ARTICLE{metacal2,
    author = {{Sheldon}, E.~S. and {Huff}, E.~M.},
@@ -448,7 +435,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{LENSFIT1,
-   author = {{Miller}, L. and {Kitching}, T.~D. and {Heymans}, C. and {Heavens}, A.~F. and 
+   author = {{Miller}, L. and {Kitching}, T.~D. and {Heymans}, C. and {Heavens}, A.~F. and
 	{van Waerbeke}, L.},
     title = "{Bayesian galaxy shape measurement for weak lensing surveys - I. Methodology and a fast-fitting algorithm}",
   journal = {\mnras},
@@ -467,7 +454,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{im3Shape,
-   author = {{Zuntz}, J. and {Kacprzak}, T. and {Voigt}, L. and {Hirsch}, M. and 
+   author = {{Zuntz}, J. and {Kacprzak}, T. and {Voigt}, L. and {Hirsch}, M. and
 	{Rowe}, B. and {Bridle}, S.},
     title = "{IM3SHAPE: a maximum likelihood galaxy shear measurement code for cosmic gravitational lensing}",
   journal = {\mnras},
@@ -504,7 +491,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{BFD16,
-   author = {{Bernstein}, G.~M. and {Armstrong}, R. and {Krawiec}, C. and 
+   author = {{Bernstein}, G.~M. and {Armstrong}, R. and {Krawiec}, C. and
 	{March}, M.~C.},
     title = "{An accurate and practical method for inference of weak gravitational lensing from galaxy images}",
   journal = {\mnras},
@@ -543,7 +530,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{noiseBiasRefregier2012,
-   author = {{Refregier}, A. and {Kacprzak}, T. and {Amara}, A. and {Bridle}, S. and 
+   author = {{Refregier}, A. and {Kacprzak}, T. and {Amara}, A. and {Bridle}, S. and
 	{Rowe}, B.},
     title = "{Noise bias in weak lensing shape measurements}",
   journal = {\mnras},
@@ -652,9 +639,9 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{GalSim,
-   author = {{Rowe}, B.~T.~P. and {Jarvis}, M. and {Mandelbaum}, R. and {Bernstein}, G.~M. and 
-	{Bosch}, J. and {Simet}, M. and {Meyers}, J.~E. and {Kacprzak}, T. and 
-	{Nakajima}, R. and {Zuntz}, J. and {Miyatake}, H. and {Dietrich}, J.~P. and 
+   author = {{Rowe}, B.~T.~P. and {Jarvis}, M. and {Mandelbaum}, R. and {Bernstein}, G.~M. and
+	{Bosch}, J. and {Simet}, M. and {Meyers}, J.~E. and {Kacprzak}, T. and
+	{Nakajima}, R. and {Zuntz}, J. and {Miyatake}, H. and {Dietrich}, J.~P. and
 	{Armstrong}, R. and {Melchior}, P. and {Gill}, M.~S.~S.},
     title = "{GALSIM: The modular galaxy image simulation toolkit}",
   journal = {Astronomy and Computing},
@@ -673,16 +660,16 @@ archivePrefix = "arXiv",
 
 
 
-@ARTICLE{GREAT08,
-   author = {{Bridle}, S. and {Shawe-Taylor}, J. and {Amara}, A. and {Applegate}, D. and 
-	{Balan}, Berge and {Bernstein}, G. and {Dahle}, H. and 
-	{Erben}, T. and {Gill}, M. and {Heavens}, A. and {Heymans}, C. and 
-	{High}, F.~W. and {Hoekstra}, H. and {Jarvis}, M. and {Kirk}, D. and 
-	{Kitching}, T. and {Kneib}, J.-P. and {Kuijken}, K. and {Lagatutta}, D. and 
-	{Mandelbaum}, R. and {Massey}, R. and {Mellier}, Y. and {Moghaddam}, B. and 
-	{Moudden}, Y. and {Nakajima}, R. and {Paulin-Henriksson}, S. and 
-	{Pires}, S. and {Rassat}, A. and {Refregier}, A. and {Rhodes}, J. and 
-	{Schrabback}, T. and {Semboloni}, E. and {Shmakova}, M. and 
+@ARTICLE{galsim-GREAT08,
+   author = {{Bridle}, S. and {Shawe-Taylor}, J. and {Amara}, A. and {Applegate}, D. and
+	{Balan}, Berge and {Bernstein}, G. and {Dahle}, H. and
+	{Erben}, T. and {Gill}, M. and {Heavens}, A. and {Heymans}, C. and
+	{High}, F.~W. and {Hoekstra}, H. and {Jarvis}, M. and {Kirk}, D. and
+	{Kitching}, T. and {Kneib}, J.-P. and {Kuijken}, K. and {Lagatutta}, D. and
+	{Mandelbaum}, R. and {Massey}, R. and {Mellier}, Y. and {Moghaddam}, B. and
+	{Moudden}, Y. and {Nakajima}, R. and {Paulin-Henriksson}, S. and
+	{Pires}, S. and {Rassat}, A. and {Refregier}, A. and {Rhodes}, J. and
+	{Schrabback}, T. and {Semboloni}, E. and {Shmakova}, M. and
 	{van Waerbeke}, L. and {Witherick}, D. and {Voigt}, L. and {Wittman}, D.},
     title = "{Handbook for the GREAT08 Challenge: An image analysis competition for cosmological lensing}",
   journal = {Annals of Applied Statistics},
@@ -699,14 +686,14 @@ archivePrefix = "arXiv",
 
 
 
-@ARTICLE{GREAT3,
-   author = {{Mandelbaum}, R. and {Rowe}, B. and {Bosch}, J. and {Chang}, C. and 
-	{Courbin}, F. and {Gill}, M. and {Jarvis}, M. and {Kannawadi}, A. and 
-	{Kacprzak}, T. and {Lackner}, C. and {Leauthaud}, A. and {Miyatake}, H. and 
-	{Nakajima}, R. and {Rhodes}, J. and {Simet}, M. and {Zuntz}, J. and 
-	{Armstrong}, B. and {Bridle}, S. and {Coupon}, J. and {Dietrich}, J.~P. and 
-	{Gentile}, M. and {Heymans}, C. and {Jurling}, A.~S. and {Kent}, S.~M. and 
-	{Kirkby}, D. and {Margala}, D. and {Massey}, R. and {Melchior}, P. and 
+@ARTICLE{galsim-GREAT3,
+   author = {{Mandelbaum}, R. and {Rowe}, B. and {Bosch}, J. and {Chang}, C. and
+	{Courbin}, F. and {Gill}, M. and {Jarvis}, M. and {Kannawadi}, A. and
+	{Kacprzak}, T. and {Lackner}, C. and {Leauthaud}, A. and {Miyatake}, H. and
+	{Nakajima}, R. and {Rhodes}, J. and {Simet}, M. and {Zuntz}, J. and
+	{Armstrong}, B. and {Bridle}, S. and {Coupon}, J. and {Dietrich}, J.~P. and
+	{Gentile}, M. and {Heymans}, C. and {Jurling}, A.~S. and {Kent}, S.~M. and
+	{Kirkby}, D. and {Margala}, D. and {Massey}, R. and {Melchior}, P. and
 	{Peterson}, J. and {Roodman}, A. and {Schrabback}, T.},
     title = "{The Third Gravitational Lensing Accuracy Testing (GREAT3) Challenge Handbook}",
   journal = {\apjs},
@@ -724,10 +711,8 @@ archivePrefix = "arXiv",
 }
 
 
-
-
-@ARTICLE{SHEARA,
-   author = {{Mandelbaum}, R. and {Hirata}, C.~M. and {Leauthaud}, A. and 
+@ARTICLE{galsim-SHEARA,
+   author = {{Mandelbaum}, R. and {Hirata}, C.~M. and {Leauthaud}, A. and
 	{Massey}, R.~J. and {Rhodes}, J.},
     title = "{Precision simulation of ground-based lensing data using observations from space}",
   journal = {\mnras},
@@ -768,9 +753,9 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{HST-ACSpipe,
-   author = {{Koekemoer}, A.~M. and {Aussel}, H. and {Calzetti}, D. and {Capak}, P. and 
-	{Giavalisco}, M. and {Kneib}, J.-P. and {Leauthaud}, A. and 
-	{Le F{\`e}vre}, O. and {McCracken}, H.~J. and {Massey}, R. and 
+   author = {{Koekemoer}, A.~M. and {Aussel}, H. and {Calzetti}, D. and {Capak}, P. and
+	{Giavalisco}, M. and {Kneib}, J.-P. and {Leauthaud}, A. and
+	{Le F{\`e}vre}, O. and {McCracken}, H.~J. and {Massey}, R. and
 	{Mobasher}, B. and {Rhodes}, J. and {Scoville}, N. and {Shopbell}, P.~L.
 	},
     title = "{The COSMOS Survey: Hubble Space Telescope Advanced Camera for Surveys Observations and Data Processing}",
@@ -787,10 +772,10 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{HST-shapeCatalog-Alexie2007,
-   author = {{Leauthaud}, A. and {Massey}, R. and {Kneib}, J.-P. and {Rhodes}, J. and 
-	{Johnston}, D.~E. and {Capak}, P. and {Heymans}, C. and {Ellis}, R.~S. and 
-	{Koekemoer}, A.~M. and {Le F{\`e}vre}, O. and {Mellier}, Y. and 
-	{R{\'e}fr{\'e}gier}, A. and {Robin}, A.~C. and {Scoville}, N. and 
+   author = {{Leauthaud}, A. and {Massey}, R. and {Kneib}, J.-P. and {Rhodes}, J. and
+	{Johnston}, D.~E. and {Capak}, P. and {Heymans}, C. and {Ellis}, R.~S. and
+	{Koekemoer}, A.~M. and {Le F{\`e}vre}, O. and {Mellier}, Y. and
+	{R{\'e}fr{\'e}gier}, A. and {Robin}, A.~C. and {Scoville}, N. and
 	{Tasca}, L. and {Taylor}, J.~E. and {Van Waerbeke}, L.},
     title = "{Weak Gravitational Lensing with COSMOS: Galaxy Selection and Shape Measurements}",
   journal = {\apjs},
@@ -805,10 +790,7 @@ archivePrefix = {arXiv},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-
-@article{SDSS-DR4,
+@ARTICLE{SDSS-DR4,
 	doi = {10.1086/497917},
 	url = {https://doi.org/10.1086%2F497917},
 	year = 2006,
@@ -824,8 +806,8 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{SDSS-DR7,
-   author = {{Abazajian}, K.~N. and {Adelman-McCarthy}, J.~K. and {Ag{\"u}eros}, M.~A. and 
-	{Allam}, S.~S. and {Allende Prieto}, C. and {An}, D. and {Anderson}, K.~S.~J. and 
+   author = {{Abazajian}, K.~N. and {Adelman-McCarthy}, J.~K. and {Ag{\"u}eros}, M.~A. and
+	{Allam}, S.~S. and {Allende Prieto}, C. and {An}, D. and {Anderson}, K.~S.~J. and
 	{Anderson}, S.~F. and {Annis}, J. and {Bahcall}, N.~A. and et al.},
     title = "{The Seventh Data Release of the Sloan Digital Sky Survey}",
   journal = {\apjs},
@@ -842,7 +824,7 @@ archivePrefix = "arXiv",
 }
 
 @INPROCEEDINGS{SDSSpipe,
-   author = {{Lupton}, R. and {Gunn}, J.~E. and {Ivezi{\'c}}, Z. and {Knapp}, G.~R. and 
+   author = {{Lupton}, R. and {Gunn}, J.~E. and {Ivezi{\'c}}, Z. and {Knapp}, G.~R. and
 	{Kent}, S.},
     title = "{The SDSS Imaging Pipelines}",
 booktitle = {Astronomical Data Analysis Software and Systems X},
@@ -859,21 +841,21 @@ booktitle = {Astronomical Data Analysis Software and Systems X},
 
 
 @ARTICLE{KIDS13,
-   author = {{de Jong}, J.~T.~A. and {Kuijken}, K. and {Applegate}, D. and 
-	{Begeman}, K. and {Belikov}, A. and {Blake}, C. and {Bout}, J. and 
-	{Boxhoorn}, D. and {Buddelmeijer}, H. and {Buddendiek}, A. and 
-	{Cacciato}, M. and {Capaccioli}, M. and {Choi}, A. and {Cordes}, O. and 
-	{Covone}, G. and {Dall'Ora}, M. and {Edge}, A. and {Erben}, T. and 
-	{Franse}, J. and {Getman}, F. and {Grado}, A. and {Harnois-Deraps}, J. and 
-	{Helmich}, E. and {Herbonnet}, R. and {Heymans}, C. and {Hildebrandt}, H. and 
-	{Hoekstra}, H. and {Huang}, Z. and {Irisarri}, N. and {Joachimi}, B. and 
-	{K{\"o}hlinger}, F. and {Kitching}, T. and {La Barbera}, F. and 
-	{Lacerda}, P. and {McFarland}, J. and {Miller}, L. and {Nakajima}, R. and 
-	{Napolitano}, N.~R. and {Paolillo}, M. and {Peacock}, J. and 
-	{Pila-Diez}, B. and {Puddu}, E. and {Radovich}, M. and {Rifatto}, A. and 
-	{Schneider}, P. and {Schrabback}, T. and {Sifon}, C. and {Sikkema}, G. and 
-	{Simon}, P. and {Sutherland}, W. and {Tudorica}, A. and {Valentijn}, E. and 
-	{van der Burg}, R. and {van Uitert}, E. and {van Waerbeke}, L. and 
+   author = {{de Jong}, J.~T.~A. and {Kuijken}, K. and {Applegate}, D. and
+	{Begeman}, K. and {Belikov}, A. and {Blake}, C. and {Bout}, J. and
+	{Boxhoorn}, D. and {Buddelmeijer}, H. and {Buddendiek}, A. and
+	{Cacciato}, M. and {Capaccioli}, M. and {Choi}, A. and {Cordes}, O. and
+	{Covone}, G. and {Dall'Ora}, M. and {Edge}, A. and {Erben}, T. and
+	{Franse}, J. and {Getman}, F. and {Grado}, A. and {Harnois-Deraps}, J. and
+	{Helmich}, E. and {Herbonnet}, R. and {Heymans}, C. and {Hildebrandt}, H. and
+	{Hoekstra}, H. and {Huang}, Z. and {Irisarri}, N. and {Joachimi}, B. and
+	{K{\"o}hlinger}, F. and {Kitching}, T. and {La Barbera}, F. and
+	{Lacerda}, P. and {McFarland}, J. and {Miller}, L. and {Nakajima}, R. and
+	{Napolitano}, N.~R. and {Paolillo}, M. and {Peacock}, J. and
+	{Pila-Diez}, B. and {Puddu}, E. and {Radovich}, M. and {Rifatto}, A. and
+	{Schneider}, P. and {Schrabback}, T. and {Sifon}, C. and {Sikkema}, G. and
+	{Simon}, P. and {Sutherland}, W. and {Tudorica}, A. and {Valentijn}, E. and
+	{van der Burg}, R. and {van Uitert}, E. and {van Waerbeke}, L. and
 	{Velander}, M. and {Kleijn}, G.~V. and {Viola}, M. and {Vriend}, W.-J.
 	},
     title = "{The Kilo-Degree Survey}",
@@ -885,9 +867,6 @@ booktitle = {Astronomical Data Analysis Software and Systems X},
    adsurl = {http://adsabs.harvard.edu/abs/2013Msngr.154...44D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
-
 
 @ARTICLE{DES05,
    author = {{The Dark Energy Survey Collaboration}},
@@ -902,43 +881,43 @@ booktitle = {Astronomical Data Analysis Software and Systems X},
 }
 
 @ARTICLE{DES16,
-   author = {{Dark Energy Survey Collaboration} and {Abbott}, T. and {Abdalla}, F.~B. and 
-	{Aleksi{\'c}}, J. and {Allam}, S. and {Amara}, A. and {Bacon}, D. and 
-	{Balbinot}, E. and {Banerji}, M. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and 
-	{Bernstein}, G.~M. and {Bertin}, E. and {Blazek}, J. and {Bonnett}, C. and 
-	{Bridle}, S. and {Brooks}, D. and {Brunner}, R.~J. and {Buckley-Geer}, E. and 
-	{Burke}, D.~L. and {Caminha}, G.~B. and {Capozzi}, D. and {Carlsen}, J. and 
-	{Carnero-Rosell}, A. and {Carollo}, M. and {Carrasco-Kind}, M. and 
-	{Carretero}, J. and {Castander}, F.~J. and {Clerkin}, L. and 
-	{Collett}, T. and {Conselice}, C. and {Crocce}, M. and {Cunha}, C.~E. and 
-	{D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, T.~M. and 
-	{Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Dodelson}, S. and 
-	{Doel}, P. and {Drlica-Wagner}, A. and {Estrada}, J. and {Etherington}, J. and 
-	{Evrard}, A.~E. and {Fabbri}, J. and {Finley}, D.~A. and {Flaugher}, B. and 
-	{Foley}, R.~J. and {Fosalba}, P. and {Frieman}, J. and {Garc{\'{\i}}a-Bellido}, J. and 
-	{Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and 
-	{Goldstein}, D.~A. and {Gruen}, D. and {Gruendl}, R.~A. and 
-	{Guarnieri}, P. and {Gutierrez}, G. and {Hartley}, W. and {Honscheid}, K. and 
-	{Jain}, B. and {James}, D.~J. and {Jeltema}, T. and {Jouvel}, S. and 
-	{Kessler}, R. and {King}, A. and {Kirk}, D. and {Kron}, R. and 
-	{Kuehn}, K. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and 
-	{Lima}, M. and {Lin}, H. and {Maia}, M.~A.~G. and {Makler}, M. and 
-	{Manera}, M. and {Maraston}, C. and {Marshall}, J.~L. and {Martini}, P. and 
-	{McMahon}, R.~G. and {Melchior}, P. and {Merson}, A. and {Miller}, C.~J. and 
-	{Miquel}, R. and {Mohr}, J.~J. and {Morice-Atkinson}, X. and 
-	{Naidoo}, K. and {Neilsen}, E. and {Nichol}, R.~C. and {Nord}, B. and 
-	{Ogando}, R. and {Ostrovski}, F. and {Palmese}, A. and {Papadopoulos}, A. and 
-	{Peiris}, H.~V. and {Peoples}, J. and {Percival}, W.~J. and 
-	{Plazas}, A.~A. and {Reed}, S.~L. and {Refregier}, A. and {Romer}, A.~K. and 
-	{Roodman}, A. and {Ross}, A. and {Rozo}, E. and {Rykoff}, E.~S. and 
-	{Sadeh}, I. and {Sako}, M. and {S{\'a}nchez}, C. and {Sanchez}, E. and 
-	{Santiago}, B. and {Scarpine}, V. and {Schubnell}, M. and {Sevilla-Noarbe}, I. and 
-	{Sheldon}, E. and {Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and 
-	{Sobreira}, F. and {Soumagnac}, M. and {Suchyta}, E. and {Sullivan}, M. and 
-	{Swanson}, M. and {Tarle}, G. and {Thaler}, J. and {Thomas}, D. and 
-	{Thomas}, R.~C. and {Tucker}, D. and {Vieira}, J.~D. and {Vikram}, V. and 
-	{Walker}, A.~R. and {Wechsler}, R.~H. and {Weller}, J. and {Wester}, W. and 
-	{Whiteway}, L. and {Wilcox}, H. and {Yanny}, B. and {Zhang}, Y. and 
+   author = {{Dark Energy Survey Collaboration} and {Abbott}, T. and {Abdalla}, F.~B. and
+	{Aleksi{\'c}}, J. and {Allam}, S. and {Amara}, A. and {Bacon}, D. and
+	{Balbinot}, E. and {Banerji}, M. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
+	{Bernstein}, G.~M. and {Bertin}, E. and {Blazek}, J. and {Bonnett}, C. and
+	{Bridle}, S. and {Brooks}, D. and {Brunner}, R.~J. and {Buckley-Geer}, E. and
+	{Burke}, D.~L. and {Caminha}, G.~B. and {Capozzi}, D. and {Carlsen}, J. and
+	{Carnero-Rosell}, A. and {Carollo}, M. and {Carrasco-Kind}, M. and
+	{Carretero}, J. and {Castander}, F.~J. and {Clerkin}, L. and
+	{Collett}, T. and {Conselice}, C. and {Crocce}, M. and {Cunha}, C.~E. and
+	{D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, T.~M. and
+	{Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Dodelson}, S. and
+	{Doel}, P. and {Drlica-Wagner}, A. and {Estrada}, J. and {Etherington}, J. and
+	{Evrard}, A.~E. and {Fabbri}, J. and {Finley}, D.~A. and {Flaugher}, B. and
+	{Foley}, R.~J. and {Fosalba}, P. and {Frieman}, J. and {Garc{\'{\i}}a-Bellido}, J. and
+	{Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+	{Goldstein}, D.~A. and {Gruen}, D. and {Gruendl}, R.~A. and
+	{Guarnieri}, P. and {Gutierrez}, G. and {Hartley}, W. and {Honscheid}, K. and
+	{Jain}, B. and {James}, D.~J. and {Jeltema}, T. and {Jouvel}, S. and
+	{Kessler}, R. and {King}, A. and {Kirk}, D. and {Kron}, R. and
+	{Kuehn}, K. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and
+	{Lima}, M. and {Lin}, H. and {Maia}, M.~A.~G. and {Makler}, M. and
+	{Manera}, M. and {Maraston}, C. and {Marshall}, J.~L. and {Martini}, P. and
+	{McMahon}, R.~G. and {Melchior}, P. and {Merson}, A. and {Miller}, C.~J. and
+	{Miquel}, R. and {Mohr}, J.~J. and {Morice-Atkinson}, X. and
+	{Naidoo}, K. and {Neilsen}, E. and {Nichol}, R.~C. and {Nord}, B. and
+	{Ogando}, R. and {Ostrovski}, F. and {Palmese}, A. and {Papadopoulos}, A. and
+	{Peiris}, H.~V. and {Peoples}, J. and {Percival}, W.~J. and
+	{Plazas}, A.~A. and {Reed}, S.~L. and {Refregier}, A. and {Romer}, A.~K. and
+	{Roodman}, A. and {Ross}, A. and {Rozo}, E. and {Rykoff}, E.~S. and
+	{Sadeh}, I. and {Sako}, M. and {S{\'a}nchez}, C. and {Sanchez}, E. and
+	{Santiago}, B. and {Scarpine}, V. and {Schubnell}, M. and {Sevilla-Noarbe}, I. and
+	{Sheldon}, E. and {Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and
+	{Sobreira}, F. and {Soumagnac}, M. and {Suchyta}, E. and {Sullivan}, M. and
+	{Swanson}, M. and {Tarle}, G. and {Thaler}, J. and {Thomas}, D. and
+	{Thomas}, R.~C. and {Tucker}, D. and {Vieira}, J.~D. and {Vikram}, V. and
+	{Walker}, A.~R. and {Wechsler}, R.~H. and {Weller}, J. and {Wester}, W. and
+	{Whiteway}, L. and {Wilcox}, H. and {Yanny}, B. and {Zhang}, Y. and
 	{Zuntz}, J.},
     title = "{The Dark Energy Survey: more than dark energy - an overview}",
   journal = {\mnras},
@@ -954,38 +933,35 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-
 @ARTICLE{DEScat17,
-   author = {{Zuntz}, J. and {Sheldon}, E. and {Samuroff}, S. and {Troxel}, M.~A. and 
-	{Jarvis}, M. and {MacCrann}, N. and {Gruen}, D. and {Prat}, J. and 
-	{S{\'a}nchez}, C. and {Choi}, A. and {Bridle}, S.~L. and {Bernstein}, G.~M. and 
-	{Dodelson}, S. and {Drlica-Wagner}, A. and {Fang}, Y. and {Gruendl}, R.~A. and 
-	{Hoyle}, B. and {Huff}, E.~M. and {Jain}, B. and {Kirk}, D. and 
-	{Kacprzak}, T. and {Krawiec}, C. and {Plazas}, A.~A. and {Rollins}, R.~P. and 
-	{Rykoff}, E.~S. and {Sevilla-Noarbe}, I. and {Soergel}, B. and 
-	{Varga}, T.~N. and {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and 
-	{Allam}, S. and {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and 
-	{Bertin}, E. and {Buckley-Geer}, E. and {Burke}, D.~L. and {Carnero Rosell}, A. and 
-	{Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and 
-	{Crocce}, M. and {Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and 
-	{Davis}, C. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and 
-	{Doel}, P. and {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and 
-	{Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and 
-	{Fosalba}, P. and {Frieman}, J. and {Garc{\'{\i}}a-Bellido}, J. and 
-	{Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and 
-	{Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and 
-	{Honscheid}, K. and {James}, D.~J. and {Jeltema}, T. and {Johnson}, M.~W.~G. and 
-	{Johnson}, M.~D. and {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and 
-	{Lahav}, O. and {Li}, T.~S. and {Lima}, M. and {Maia}, M.~A.~G. and 
-	{March}, M. and {Martini}, P. and {Melchior}, P. and {Menanteau}, F. and 
-	{Miller}, C.~J. and {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and 
-	{Nichol}, R.~C. and {Ogando}, R.~L.~C. and {Roe}, N. and {Romer}, A.~K. and 
-	{Roodman}, A. and {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and 
-	{Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and 
-	{Sobreira}, F. and {Suchyta}, E. and {Swanson}, M.~E.~C. and 
-	{Tarle}, G. and {Thomas}, D. and {Tucker}, D.~L. and {Vikram}, V. and 
+   author = {{Zuntz}, J. and {Sheldon}, E. and {Samuroff}, S. and {Troxel}, M.~A. and
+	{Jarvis}, M. and {MacCrann}, N. and {Gruen}, D. and {Prat}, J. and
+	{S{\'a}nchez}, C. and {Choi}, A. and {Bridle}, S.~L. and {Bernstein}, G.~M. and
+	{Dodelson}, S. and {Drlica-Wagner}, A. and {Fang}, Y. and {Gruendl}, R.~A. and
+	{Hoyle}, B. and {Huff}, E.~M. and {Jain}, B. and {Kirk}, D. and
+	{Kacprzak}, T. and {Krawiec}, C. and {Plazas}, A.~A. and {Rollins}, R.~P. and
+	{Rykoff}, E.~S. and {Sevilla-Noarbe}, I. and {Soergel}, B. and
+	{Varga}, T.~N. and {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and
+	{Allam}, S. and {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
+	{Bertin}, E. and {Buckley-Geer}, E. and {Burke}, D.~L. and {Carnero Rosell}, A. and
+	{Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and
+	{Crocce}, M. and {Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and
+	{Davis}, C. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and
+	{Doel}, P. and {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and
+	{Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and
+	{Fosalba}, P. and {Frieman}, J. and {Garc{\'{\i}}a-Bellido}, J. and
+	{Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+	{Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and
+	{Honscheid}, K. and {James}, D.~J. and {Jeltema}, T. and {Johnson}, M.~W.~G. and
+	{Johnson}, M.~D. and {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and
+	{Lahav}, O. and {Li}, T.~S. and {Lima}, M. and {Maia}, M.~A.~G. and
+	{March}, M. and {Martini}, P. and {Melchior}, P. and {Menanteau}, F. and
+	{Miller}, C.~J. and {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and
+	{Nichol}, R.~C. and {Ogando}, R.~L.~C. and {Roe}, N. and {Romer}, A.~K. and
+	{Roodman}, A. and {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and
+	{Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and
+	{Sobreira}, F. and {Suchyta}, E. and {Swanson}, M.~E.~C. and
+	{Tarle}, G. and {Thomas}, D. and {Tucker}, D.~L. and {Vikram}, V. and
 	{Walker}, A.~R. and {Wechsler}, R.~H. and {Zhang}, Y.},
     title = "{Dark Energy Survey Year 1 Results: Weak Lensing Shape Catalogues}",
   journal = {ArXiv e-prints},
@@ -1000,14 +976,14 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{HSC1-pipeline,
-   author = {{Bosch}, J. and {Armstrong}, R. and {Bickerton}, S. and {Furusawa}, H. and 
-	{Ikeda}, H. and {Koike}, M. and {Lupton}, R. and {Mineo}, S. and 
-	{Price}, P. and {Takata}, T. and {Tanaka}, M. and {Yasuda}, N. and 
-	{AlSayyad}, Y. and {Becker}, A.~C. and {Coulton}, W. and {Coupon}, J. and 
-	{Garmilla}, J. and {Huang}, S. and {Krughoff}, K.~S. and {Lang}, D. and 
-	{Leauthaud}, A. and {Lim}, K.-T. and {Lust}, N.~B. and {MacArthur}, L.~A. and 
-	{Mandelbaum}, R. and {Miyatake}, H. and {Miyazaki}, S. and {Murata}, R. and 
-	{More}, S. and {Okura}, Y. and {Owen}, R. and {Swinbank}, J.~D. and 
+   author = {{Bosch}, J. and {Armstrong}, R. and {Bickerton}, S. and {Furusawa}, H. and
+	{Ikeda}, H. and {Koike}, M. and {Lupton}, R. and {Mineo}, S. and
+	{Price}, P. and {Takata}, T. and {Tanaka}, M. and {Yasuda}, N. and
+	{AlSayyad}, Y. and {Becker}, A.~C. and {Coulton}, W. and {Coupon}, J. and
+	{Garmilla}, J. and {Huang}, S. and {Krughoff}, K.~S. and {Lang}, D. and
+	{Leauthaud}, A. and {Lim}, K.-T. and {Lust}, N.~B. and {MacArthur}, L.~A. and
+	{Mandelbaum}, R. and {Miyatake}, H. and {Miyazaki}, S. and {Murata}, R. and
+	{More}, S. and {Okura}, Y. and {Owen}, R. and {Swinbank}, J.~D. and
 	{Strauss}, M.~A. and {Yamada}, Y. and {Yamanoi}, H.},
     title = "{The Hyper Suprime-Cam software pipeline}",
   journal = {\pasj},
@@ -1028,13 +1004,13 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{HSC1-catalog,
-   author = {{Mandelbaum}, R. and {Miyatake}, H. and {Hamana}, T. and {Oguri}, M. and 
-	{Simet}, M. and {Armstrong}, R. and {Bosch}, J. and {Murata}, R. and 
-	{Lanusse}, F. and {Leauthaud}, A. and {Coupon}, J. and {More}, S. and 
-	{Takada}, M. and {Miyazaki}, S. and {Speagle}, J.~S. and {Shirasaki}, M. and 
-	{Sif{\'o}n}, C. and {Huang}, S. and {Nishizawa}, A.~J. and {Medezinski}, E. and 
-	{Okura}, Y. and {Okabe}, N. and {Czakon}, N. and {Takahashi}, R. and 
-	{Coulton}, W.~R. and {Hikage}, C. and {Komiyama}, Y. and {Lupton}, R.~H. and 
+   author = {{Mandelbaum}, R. and {Miyatake}, H. and {Hamana}, T. and {Oguri}, M. and
+	{Simet}, M. and {Armstrong}, R. and {Bosch}, J. and {Murata}, R. and
+	{Lanusse}, F. and {Leauthaud}, A. and {Coupon}, J. and {More}, S. and
+	{Takada}, M. and {Miyazaki}, S. and {Speagle}, J.~S. and {Shirasaki}, M. and
+	{Sif{\'o}n}, C. and {Huang}, S. and {Nishizawa}, A.~J. and {Medezinski}, E. and
+	{Okura}, Y. and {Okabe}, N. and {Czakon}, N. and {Takahashi}, R. and
+	{Coulton}, W.~R. and {Hikage}, C. and {Komiyama}, Y. and {Lupton}, R.~H. and
 	{Strauss}, M.~A. and {Tanaka}, M. and {Utsumi}, Y.},
     title = "{The first-year shear catalog of the Subaru Hyper Suprime-Cam Subaru Strategic Program Survey}",
   journal = {\pasj},
@@ -1052,33 +1028,33 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{HSC1-data,
-   author = {{Aihara}, H. and {Armstrong}, R. and {Bickerton}, S. and {Bosch}, J. and 
-	{Coupon}, J. and {Furusawa}, H. and {Hayashi}, Y. and {Ikeda}, H. and 
-	{Kamata}, Y. and {Karoji}, H. and {Kawanomoto}, S. and {Koike}, M. and 
-	{Komiyama}, Y. and {Lang}, D. and {Lupton}, R.~H. and {Mineo}, S. and 
-	{Miyatake}, H. and {Miyazaki}, S. and {Morokuma}, T. and {Obuchi}, Y. and 
-	{Oishi}, Y. and {Okura}, Y. and {Price}, P.~A. and {Takata}, T. and 
-	{Tanaka}, M.~M. and {Tanaka}, M. and {Tanaka}, Y. and {Uchida}, T. and 
-	{Uraguchi}, F. and {Utsumi}, Y. and {Wang}, S.-Y. and {Yamada}, Y. and 
-	{Yamanoi}, H. and {Yasuda}, N. and {Arimoto}, N. and {Chiba}, M. and 
-	{Finet}, F. and {Fujimori}, H. and {Fujimoto}, S. and {Furusawa}, J. and 
-	{Goto}, T. and {Goulding}, A. and {Gunn}, J.~E. and {Harikane}, Y. and 
-	{Hattori}, T. and {Hayashi}, M. and {He{\l}miniak}, K.~G. and 
-	{Higuchi}, R. and {Hikage}, C. and {Ho}, P.~T.~P. and {Hsieh}, B.-C. and 
-	{Huang}, K. and {Huang}, S. and {Imanishi}, M. and {Iwata}, I. and 
-	{Jaelani}, A.~T. and {Jian}, H.-Y. and {Kashikawa}, N. and {Katayama}, N. and 
-	{Kojima}, T. and {Konno}, A. and {Koshida}, S. and {Kusakabe}, H. and 
-	{Leauthaud}, A. and {Lee}, C.-H. and {Lin}, L. and {Lin}, Y.-T. and 
-	{Mandelbaum}, R. and {Matsuoka}, Y. and {Medezinski}, E. and 
-	{Miyama}, S. and {Momose}, R. and {More}, A. and {More}, S. and 
-	{Mukae}, S. and {Murata}, R. and {Murayama}, H. and {Nagao}, T. and 
-	{Nakata}, F. and {Niida}, M. and {Niikura}, H. and {Nishizawa}, A.~J. and 
-	{Oguri}, M. and {Okabe}, N. and {Ono}, Y. and {Onodera}, M. and 
-	{Onoue}, M. and {Ouchi}, M. and {Pyo}, T.-S. and {Shibuya}, T. and 
-	{Shimasaku}, K. and {Simet}, M. and {Speagle}, J. and {Spergel}, D.~N. and 
-	{Strauss}, M.~A. and {Sugahara}, Y. and {Sugiyama}, N. and {Suto}, Y. and 
-	{Suzuki}, N. and {Tait}, P.~J. and {Takada}, M. and {Terai}, T. and 
-	{Toba}, Y. and {Turner}, E.~L. and {Uchiyama}, H. and {Umetsu}, K. and 
+   author = {{Aihara}, H. and {Armstrong}, R. and {Bickerton}, S. and {Bosch}, J. and
+	{Coupon}, J. and {Furusawa}, H. and {Hayashi}, Y. and {Ikeda}, H. and
+	{Kamata}, Y. and {Karoji}, H. and {Kawanomoto}, S. and {Koike}, M. and
+	{Komiyama}, Y. and {Lang}, D. and {Lupton}, R.~H. and {Mineo}, S. and
+	{Miyatake}, H. and {Miyazaki}, S. and {Morokuma}, T. and {Obuchi}, Y. and
+	{Oishi}, Y. and {Okura}, Y. and {Price}, P.~A. and {Takata}, T. and
+	{Tanaka}, M.~M. and {Tanaka}, M. and {Tanaka}, Y. and {Uchida}, T. and
+	{Uraguchi}, F. and {Utsumi}, Y. and {Wang}, S.-Y. and {Yamada}, Y. and
+	{Yamanoi}, H. and {Yasuda}, N. and {Arimoto}, N. and {Chiba}, M. and
+	{Finet}, F. and {Fujimori}, H. and {Fujimoto}, S. and {Furusawa}, J. and
+	{Goto}, T. and {Goulding}, A. and {Gunn}, J.~E. and {Harikane}, Y. and
+	{Hattori}, T. and {Hayashi}, M. and {He{\l}miniak}, K.~G. and
+	{Higuchi}, R. and {Hikage}, C. and {Ho}, P.~T.~P. and {Hsieh}, B.-C. and
+	{Huang}, K. and {Huang}, S. and {Imanishi}, M. and {Iwata}, I. and
+	{Jaelani}, A.~T. and {Jian}, H.-Y. and {Kashikawa}, N. and {Katayama}, N. and
+	{Kojima}, T. and {Konno}, A. and {Koshida}, S. and {Kusakabe}, H. and
+	{Leauthaud}, A. and {Lee}, C.-H. and {Lin}, L. and {Lin}, Y.-T. and
+	{Mandelbaum}, R. and {Matsuoka}, Y. and {Medezinski}, E. and
+	{Miyama}, S. and {Momose}, R. and {More}, A. and {More}, S. and
+	{Mukae}, S. and {Murata}, R. and {Murayama}, H. and {Nagao}, T. and
+	{Nakata}, F. and {Niida}, M. and {Niikura}, H. and {Nishizawa}, A.~J. and
+	{Oguri}, M. and {Okabe}, N. and {Ono}, Y. and {Onodera}, M. and
+	{Onoue}, M. and {Ouchi}, M. and {Pyo}, T.-S. and {Shibuya}, T. and
+	{Shimasaku}, K. and {Simet}, M. and {Speagle}, J. and {Spergel}, D.~N. and
+	{Strauss}, M.~A. and {Sugahara}, Y. and {Sugiyama}, N. and {Suto}, Y. and
+	{Suzuki}, N. and {Tait}, P.~J. and {Takada}, M. and {Terai}, T. and
+	{Toba}, Y. and {Turner}, E.~L. and {Uchiyama}, H. and {Umetsu}, K. and
 	{Urata}, Y. and {Usuda}, T. and {Yeh}, S. and {Yuma}, S.},
     title = "{First data release of the Hyper Suprime-Cam Subaru Strategic Program}",
   journal = {\pasj},
@@ -1118,12 +1094,9 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-
 @ARTICLE{Euclid2011,
-   author = {{Laureijs}, R. and {Amiaux}, J. and {Arduini}, S. and {Augu{\`e}res}, J.~-. and 
-	{Brinchmann}, J. and {Cole}, R. and {Cropper}, M. and {Dabin}, C. and 
+   author = {{Laureijs}, R. and {Amiaux}, J. and {Arduini}, S. and {Augu{\`e}res}, J.~-. and
+	{Brinchmann}, J. and {Cole}, R. and {Cropper}, M. and {Dabin}, C. and
 	{Duvet}, L. and {Ealet}, A. and et al.},
     title = "{Euclid Definition Study Report}",
   journal = {ArXiv e-prints},
@@ -1139,17 +1112,17 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{WFIRST2.4,
-   author = {{Spergel}, D. and {Gehrels}, N. and {Breckinridge}, J. and {Donahue}, M. and 
-	{Dressler}, A. and {Gaudi}, B.~S. and {Greene}, T. and {Guyon}, O. and 
-	{Hirata}, C. and {Kalirai}, J. and {Kasdin}, N.~J. and {Moos}, W. and 
-	{Perlmutter}, S. and {Postman}, M. and {Rauscher}, B. and {Rhodes}, J. and 
-	{Wang}, Y. and {Weinberg}, D. and {Centrella}, J. and {Traub}, W. and 
-	{Baltay}, C. and {Colbert}, J. and {Bennett}, D. and {Kiessling}, A. and 
-	{Macintosh}, B. and {Merten}, J. and {Mortonson}, M. and {Penny}, M. and 
-	{Rozo}, E. and {Savransky}, D. and {Stapelfeldt}, K. and {Zu}, Y. and 
-	{Baker}, C. and {Cheng}, E. and {Content}, D. and {Dooley}, J. and 
-	{Foote}, M. and {Goullioud}, R. and {Grady}, K. and {Jackson}, C. and 
-	{Kruk}, J. and {Levine}, M. and {Melton}, M. and {Peddie}, C. and 
+   author = {{Spergel}, D. and {Gehrels}, N. and {Breckinridge}, J. and {Donahue}, M. and
+	{Dressler}, A. and {Gaudi}, B.~S. and {Greene}, T. and {Guyon}, O. and
+	{Hirata}, C. and {Kalirai}, J. and {Kasdin}, N.~J. and {Moos}, W. and
+	{Perlmutter}, S. and {Postman}, M. and {Rauscher}, B. and {Rhodes}, J. and
+	{Wang}, Y. and {Weinberg}, D. and {Centrella}, J. and {Traub}, W. and
+	{Baltay}, C. and {Colbert}, J. and {Bennett}, D. and {Kiessling}, A. and
+	{Macintosh}, B. and {Merten}, J. and {Mortonson}, M. and {Penny}, M. and
+	{Rozo}, E. and {Savransky}, D. and {Stapelfeldt}, K. and {Zu}, Y. and
+	{Baker}, C. and {Cheng}, E. and {Content}, D. and {Dooley}, J. and
+	{Foote}, M. and {Goullioud}, R. and {Grady}, K. and {Jackson}, C. and
+	{Kruk}, J. and {Levine}, M. and {Melton}, M. and {Peddie}, C. and
 	{Ruffa}, J. and {Shaklan}, S.},
     title = "{WFIRST-2.4: What Every Astronomer Should Know}",
   journal = {ArXiv e-prints},
@@ -1164,19 +1137,19 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{WFIRST15,
-   author = {{Spergel}, D. and {Gehrels}, N. and {Baltay}, C. and {Bennett}, D. and 
-	{Breckinridge}, J. and {Donahue}, M. and {Dressler}, A. and 
-	{Gaudi}, B.~S. and {Greene}, T. and {Guyon}, O. and {Hirata}, C. and 
-	{Kalirai}, J. and {Kasdin}, N.~J. and {Macintosh}, B. and {Moos}, W. and 
-	{Perlmutter}, S. and {Postman}, M. and {Rauscher}, B. and {Rhodes}, J. and 
-	{Wang}, Y. and {Weinberg}, D. and {Benford}, D. and {Hudson}, M. and 
-	{Jeong}, W.-S. and {Mellier}, Y. and {Traub}, W. and {Yamada}, T. and 
-	{Capak}, P. and {Colbert}, J. and {Masters}, D. and {Penny}, M. and 
-	{Savransky}, D. and {Stern}, D. and {Zimmerman}, N. and {Barry}, R. and 
-	{Bartusek}, L. and {Carpenter}, K. and {Cheng}, E. and {Content}, D. and 
-	{Dekens}, F. and {Demers}, R. and {Grady}, K. and {Jackson}, C. and 
-	{Kuan}, G. and {Kruk}, J. and {Melton}, M. and {Nemati}, B. and 
-	{Parvin}, B. and {Poberezhskiy}, I. and {Peddie}, C. and {Ruffa}, J. and 
+   author = {{Spergel}, D. and {Gehrels}, N. and {Baltay}, C. and {Bennett}, D. and
+	{Breckinridge}, J. and {Donahue}, M. and {Dressler}, A. and
+	{Gaudi}, B.~S. and {Greene}, T. and {Guyon}, O. and {Hirata}, C. and
+	{Kalirai}, J. and {Kasdin}, N.~J. and {Macintosh}, B. and {Moos}, W. and
+	{Perlmutter}, S. and {Postman}, M. and {Rauscher}, B. and {Rhodes}, J. and
+	{Wang}, Y. and {Weinberg}, D. and {Benford}, D. and {Hudson}, M. and
+	{Jeong}, W.-S. and {Mellier}, Y. and {Traub}, W. and {Yamada}, T. and
+	{Capak}, P. and {Colbert}, J. and {Masters}, D. and {Penny}, M. and
+	{Savransky}, D. and {Stern}, D. and {Zimmerman}, N. and {Barry}, R. and
+	{Bartusek}, L. and {Carpenter}, K. and {Cheng}, E. and {Content}, D. and
+	{Dekens}, F. and {Demers}, R. and {Grady}, K. and {Jackson}, C. and
+	{Kuan}, G. and {Kruk}, J. and {Melton}, M. and {Nemati}, B. and
+	{Parvin}, B. and {Poberezhskiy}, I. and {Peddie}, C. and {Ruffa}, J. and
 	{Wallace}, J.~K. and {Whipple}, A. and {Wollack}, E. and {Zhao}, F.
 	},
     title = "{Wide-Field InfrarRed Survey Telescope-Astrophysics Focused Telescope Assets WFIRST-AFTA 2015 Report}",
@@ -1191,10 +1164,9 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{LSSTScienceBook,
-   author = {{LSST Science Collaboration} and {Abell}, P.~A. and {Allison}, J. and 
-	{Anderson}, S.~F. and {Andrew}, J.~R. and {Angel}, J.~R.~P. and 
+   author = {{LSST Science Collaboration} and {Abell}, P.~A. and {Allison}, J. and
+	{Anderson}, S.~F. and {Andrew}, J.~R. and {Angel}, J.~R.~P. and
 	{Armus}, L. and {Arnett}, D. and {Asztalos}, S.~J. and {Axelrod}, T.~S. and et al.},
     title = "{LSST Science Book, Version 2.0}",
   journal = {ArXiv e-prints},
@@ -1207,8 +1179,6 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2009arXiv0912.0201L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
 
 @ARTICLE{PSFEx11,
    author = {{Bertin}, E.},
@@ -1225,14 +1195,8 @@ booktitle = {Astronomical Data Analysis Software and Systems XX},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
-%=========
-%photo Z
-%=========
-
 @ARTICLE{photozCunha,
-   author = {{Cunha}, C.~E. and {Lima}, M. and {Oyaizu}, H. and {Frieman}, J. and 
+   author = {{Cunha}, C.~E. and {Lima}, M. and {Oyaizu}, H. and {Frieman}, J. and
 	{Lin}, H.},
     title = "{Estimating the redshift distribution of photometric galaxy samples - II. Applications and tests of a new method}",
   journal = {\mnras},
@@ -1247,5 +1211,3 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.396.2379C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
